--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="./resources/css/style.css">
     <meta charset="utf-8">
     <title>James BW</title>
   </head>
   <body>
+
+<!--Top Banner-->
+<h1>Broadway Design</h1>
+<ul>
+  <li>Home</li>
+  <li>About</li>
+  <li>Work</li>
+  <li>Team</li>
+  <li>Contact</li>
+</ul>
+
+<!--Process Section-->
+<h2>Our Process</h2>
+<img src="./resources/images/identify.svg" alt="curly arrow">
+<h3>Identify</h3>
+<p>We focus on the most important details.</p>
+<img src="./resources/images/understand.svg" alt="circle arrows">
+<p>We Study our prjects inside and out.</p>
+<img src="./resources/images/execute.svg" alt="big arrow">
+<p>We put everything we have into our work</p>
+
+<!--Design Section-->
+<h2>Designed in New York</h2>
+<h3>Portfolio</h3>
+<p>Coming Soon</p>
+<h3>Team</h3>
+<p>We're Hiring</p>
+<h3>Contact</h3>
+<p>Phone (555) 555-5555</p>
+<p>E-mail: test@example.com</p>
+<p>Twitter: @test</p>
+
+<!--Footer-->
+<h6>&copy, Broadway 2016</h6>
+
+
+
+
+
 
   </body>
 </html>
