--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <body>
 
 <!--Top Banner-->
-<h1>Broadway Design</h1>
-<ul>
-  <li>Home</li>
-  <li>About</li>
-  <li>Work</li>
-  <li>Team</li>
-  <li>Contact</li>
-</ul>
+<div class="banner">
+  <h1>Broadway Design</h1>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Work</a></li>
+    <li><a href="#">Team</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</div>
+
 
 <!--Process Section-->
 <h2>Our Process</h2>
@@ -28,7 +31,10 @@
 <p>We put everything we have into our work</p>
 
 <!--Design Section-->
-<h2>Designed in New York</h2>
+<div class="banner">
+  <h2>Designed in New York</h2>
+</div>
+
 <h3>Portfolio</h3>
 <p>Coming Soon</p>
 <h3>Team</h3>
