--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
 
 <!--Top Banner-->
-<div class="banner">
-  <h1>Broadway Design</h1>
-  <ul>
+<div class="banner1">
+  <h1 id=title>Broadway Design</h1>
+  <ul id=list>
     <li><a href="#">Home</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Work</a></li>
@@ -21,7 +21,7 @@
 
 
 <!--Process Section-->
-<h2>Our Process</h2>
+<h2 id=subtitle>Our Process</h2>
 <img src="./resources/images/identify.svg" alt="curly arrow">
 <h3>Identify</h3>
 <p>We focus on the most important details.</p>
@@ -31,7 +31,7 @@
 <p>We put everything we have into our work</p>
 
 <!--Design Section-->
-<div class="banner">
+<div class="banner2">
   <h2>Designed in New York</h2>
 </div>
 
@@ -45,7 +45,10 @@
 <p>Twitter: @test</p>
 
 <!--Footer-->
-<h6>&copy, Broadway 2016</h6>
+<div class="footer">
+  <p>&copy, Broadway 2016</p>
+</div>
+
 
 
 
