almost done july 15

--- a/index.html
+++ b/index.html
@@ -20,29 +20,32 @@
 </div>
 
 
-<!--Process Section-->
+
+<!--Our Process Section-->
 <h2 id=subtitle>Our Process</h2>
 <img src="./resources/images/identify.svg" alt="curly arrow">
-<h3>Identify</h3>
-<p>We focus on the most important details.</p>
+<h3 class="subtitle2">Identify</h3>
+<p class="blurb">We focus on the most important details.</p>
 <img src="./resources/images/understand.svg" alt="circle arrows">
-<p>We Study our prjects inside and out.</p>
+<h3 class="subtitle2">Understand</h3>
+<p class="blurb">We Study our prjects inside and out.</p>
 <img src="./resources/images/execute.svg" alt="big arrow">
-<p>We put everything we have into our work</p>
+<h3 class="subtitle2">Execute</h3>
+<p class="blurb">We put everything we have into our work</p>
 
 <!--Design Section-->
 <div class="banner2">
   <h2>Designed in New York</h2>
 </div>
 
-<h3>Portfolio</h3>
-<p>Coming Soon</p>
-<h3>Team</h3>
-<p>We're Hiring</p>
-<h3>Contact</h3>
-<p>Phone (555) 555-5555</p>
-<p>E-mail: test@example.com</p>
-<p>Twitter: @test</p>
+<h3 class="subtitle2">Portfolio</h3>
+<p class="blurb">Coming Soon</p>
+<h3 class="subtitle2">Team</h3>
+<p class="blurb">We're Hiring</p>
+<h3 class="subtitle2">Contact</h3>
+<p class="blurb">Phone (555) 555-5555</p>
+<p class="blurb">E-mail: test@example.com</p>
+<p class=blurb>Twitter: @test</p>
 
 <!--Footer-->
 <div class="footer">
