--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div class="banner1">
   <h1 id=title>Broadway Design</h1>
   <ul id=list>
-    <li><a href="#">Home</a></li>
+    <li><a href="home">Home</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Work</a></li>
     <li><a href="#">Team</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </div>
 
@@ -48,7 +48,13 @@
 
 <!--Footer-->
 <div class="footer">
-  <p>&copy, Broadway 2016</p>
+  <p>&copy, Broadway 2016
+    <a class="btn-nav" href="home">Home</a>
+    <a class="btn-nav" href="#">About</a>
+    <a class="btn-nav" href="#">Work</a>
+    <a class="btn-nav" href="#">Team</a>
+    <a class="btn-nav" href="#">Contact</a>
+  </p>
 </div>
 
 
